Thu May 24 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Fixed another directory traversal vulnerability.
	- Fix for Bug Request ID 1723935.
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1723935&group_id=187000&atid=919543
	- Added command-line options for Default page support --defualt
	- Added option to set log off --nolog 
	- Added option to disable directory listings
	- Added option to hide servername in directory listing and HTTP
	  headers.

Sat Mar 10 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Released version 0.0.7

Mon Feb 19 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Hopefully fixing the flaw of MiniWebsvr allowing "special device
	  files" to be accessed. Still need to test properly.

Fri Feb 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Applied a patch from Helc`Ainu to provide Linux port with thread
	  pool support.
	- Minor alterations to patch to fix race condition, and exit on flag
	- Re-patched the patched patch (phew!) Helc provided me with some good
	  advice on the mistakes I have made.
	- After that, and resolving a possibly unnessesary sleep got a ~15%
	  speedup!

Tue Feb 13 2007 Daniel Walker <djwalker at users.sourceforge.net>
	- Fixed some errors with parsing % in URLs

Tue Feb 13 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Implemented more comprehensive sub-root protection

Fri Feb 9 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Pthread implementation is working fine now
	- Released version 0.0.6

Thu Feb 8 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- Range requests(download resuming) is fully functional
	- Started implementing pthreads support

Wed Feb 7 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
	- HTTP/1.0 style "Range" requests are implmented and tested
	- Added a ton of debug info

Sat Feb 3 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>